// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PDF Item Metadata Evidence Statement 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #ccc",
      "margin": "20px auto",
      "minHeight": "11in",
      "padding": ".75in",
      "width": "8.5in",
    }
  }
>
  <div
    className="centered-table-container"
  >
    <table
      className="item-data-table"
    >
      <thead>
        <tr>
          <th>
            Evidence Statement
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            This is the evidence statement
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots PDF Item Metadata Item Card Table 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #ccc",
      "margin": "20px auto",
      "minHeight": "11in",
      "padding": ".75in",
      "width": "8.5in",
    }
  }
>
  <table
    className="item-data-table"
  >
    <thead>
      <tr>
        <th>
          Item
        </th>
        <th>
          Claim
        </th>
        <th>
          Domain
        </th>
        <th>
          Target
        </th>
        <th>
          DOK
        </th>
        <th>
          Standards
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          187
          -
          3434
        </td>
        <td>
          ELA3
        </td>
        <td>
          domain
        </td>
        <td>
          dfas
        </td>
        <td>
          2
        </td>
        <td>
          AB-123
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
